<resources>
    <string name="app_name">Nutrition</string>
    <string name="tab_text_1">Search</string>
    <string name="tab_text_2">Saved</string>
    <string name="recipe">Recipe</string>
    <string name="calories">Calories</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="cabs">Carbs</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="action">Recipe saved</string>
    <string name="error">Error</string>
    <string name="errorMessage">This recipe does not exist. Try again</string>
    <string name="ok">OK</string>
</resources>